src/parser/snapshots/rbx_rsml__parser__tests__rule_descendants_selector.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Rule {
        selectors: Some(
            [
                Token(
                    Node {
                        token: SpannedToken(
                            0,
                            Identifier(
                                "Frame",
                            ),
                            5,
                        ),
                        leading_trivia: None,
                    },
                ),
                Token(
                    Node {
                        token: SpannedToken(
                            6,
                            DescendantsSelector,
                            8,
                        ),
                        leading_trivia: None,
                    },
                ),
                Token(
                    Node {
                        token: SpannedToken(
                            9,
                            Identifier(
                                "TextLabel",
                            ),
                            18,
                        ),
                        leading_trivia: None,
                    },
                ),
            ],
        ),
        body: Some(
            Delimited {
                left: Node {
                    token: SpannedToken(
                        19,
                        ScopeOpen,
                        20,
                    ),
                    leading_trivia: None,
                },
                content: None,
                right: Some(
                    Node {
                        token: SpannedToken(
                            21,
                            ScopeClose,
                            22,
                        ),
                        leading_trivia: None,
                    },
                ),
            },
        ),
    },
]
