src/parser/snapshots/rbx_rsml__parser__tests__rule_macro_call_selector.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Rule {
        selectors: Some(
            [
                MacroCall {
                    name: Node {
                        token: SpannedToken(
                            0,
                            MacroCallIdentifier(
                                Some(
                                    "sel",
                                ),
                            ),
                            4,
                        ),
                        leading_trivia: None,
                    },
                    body: Some(
                        Delimited {
                            left: Node {
                                token: SpannedToken(
                                    4,
                                    ParensOpen,
                                    5,
                                ),
                                leading_trivia: None,
                            },
                            content: Some(
                                [
                                    Node {
                                        node: Node {
                                            token: SpannedToken(
                                                5,
                                                NumberOffset(
                                                    "10px",
                                                ),
                                                9,
                                            ),
                                            leading_trivia: None,
                                        },
                                    },
                                ],
                            ),
                            right: Some(
                                Node {
                                    token: SpannedToken(
                                        9,
                                        ParensClose,
                                        10,
                                    ),
                                    leading_trivia: None,
                                },
                            ),
                        },
                    ),
                },
            ],
        ),
        body: Some(
            Delimited {
                left: Node {
                    token: SpannedToken(
                        11,
                        ScopeOpen,
                        12,
                    ),
                    leading_trivia: None,
                },
                content: Some(
                    [
                        Assignment {
                            pub_modifier: None,
                            left: Node {
                                token: SpannedToken(
                                    13,
                                    Identifier(
                                        "Size",
                                    ),
                                    17,
                                ),
                                leading_trivia: None,
                            },
                            middle: Some(
                                Node {
                                    token: SpannedToken(
                                        18,
                                        Equals,
                                        19,
                                    ),
                                    leading_trivia: None,
                                },
                            ),
                            right: Some(
                                Node {
                                    node: Node {
                                        token: SpannedToken(
                                            20,
                                            Number(
                                                "100",
                                            ),
                                            23,
                                        ),
                                        leading_trivia: None,
                                    },
                                },
                            ),
                            terminator: Some(
                                Node {
                                    token: SpannedToken(
                                        23,
                                        SemiColon,
                                        24,
                                    ),
                                    leading_trivia: None,
                                },
                            ),
                        },
                    ],
                ),
                right: Some(
                    Node {
                        token: SpannedToken(
                            25,
                            ScopeClose,
                            26,
                        ),
                        leading_trivia: None,
                    },
                ),
            },
        ),
    },
]
