src/parser/snapshots/rbx_rsml__parser__tests__rule_missing_close_brace.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Rule {
        selectors: Some(
            [
                Token(
                    Node {
                        token: SpannedToken(
                            0,
                            Identifier(
                                "Frame",
                            ),
                            5,
                        ),
                        leading_trivia: None,
                    },
                ),
            ],
        ),
        body: Some(
            Delimited {
                left: Node {
                    token: SpannedToken(
                        6,
                        ScopeOpen,
                        7,
                    ),
                    leading_trivia: None,
                },
                content: Some(
                    [
                        Assignment {
                            pub_modifier: None,
                            left: Node {
                                token: SpannedToken(
                                    8,
                                    Identifier(
                                        "Size",
                                    ),
                                    12,
                                ),
                                leading_trivia: None,
                            },
                            middle: Some(
                                Node {
                                    token: SpannedToken(
                                        13,
                                        Equals,
                                        14,
                                    ),
                                    leading_trivia: None,
                                },
                            ),
                            right: Some(
                                Node {
                                    node: Node {
                                        token: SpannedToken(
                                            15,
                                            Number(
                                                "100",
                                            ),
                                            18,
                                        ),
                                        leading_trivia: None,
                                    },
                                },
                            ),
                            terminator: Some(
                                Node {
                                    token: SpannedToken(
                                        18,
                                        SemiColon,
                                        19,
                                    ),
                                    leading_trivia: None,
                                },
                            ),
                        },
                    ],
                ),
                right: None,
            },
        ),
    },
]
