src/parser/snapshots/rbx_rsml__parser__tests__rule_name_selector.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Rule {
        selectors: Some(
            [
                Token(
                    Node {
                        token: SpannedToken(
                            0,
                            NameSelector(
                                "MyFrame",
                            ),
                            8,
                        ),
                        leading_trivia: None,
                    },
                ),
            ],
        ),
        body: Some(
            Delimited {
                left: Node {
                    token: SpannedToken(
                        9,
                        ScopeOpen,
                        10,
                    ),
                    leading_trivia: None,
                },
                content: None,
                right: Some(
                    Node {
                        token: SpannedToken(
                            11,
                            ScopeClose,
                            12,
                        ),
                        leading_trivia: None,
                    },
                ),
            },
        ),
    },
]
